--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </section>
     <!--Review-->
 
+
     <main>
       <div class="user-review">
         <section class="review-section" id="reviews">
@@ -75,10 +76,10 @@
           <div class="review-cards">
             <div class="review-card">
               <div class="col1">
-                <img src="profilepic.jpg" class="review-image" alt="John Doe" />
+                <img src="pic1.jpg" class="review-image" alt="John Doe" />
               </div>
               <div class="col2">
-                <h3>Jhanvi mehra</h3>
+                <h3>John Doe</h3>
                 <p class="rating">⭐⭐⭐⭐⭐</p>
                 <p>
                   "This is the best service I've ever used! The quality is
@@ -88,10 +89,10 @@
             </div>
             <div class="review-card">
               <div class="col1">
-                <img src="profilepic.jpg" class="review-image" alt="Jane Smith" />
+                <img src="pic2.jpg" class="review-image" alt="Jane Smith" />
               </div>
               <div class="col2">
-                <h3>Gyanesh</h3>
+                <h3>Jane Smith</h3>
                 <p class="rating">⭐⭐⭐⭐</p>
                 <p>
                   "Excellent support and amazing features. Highly satisfied with
@@ -101,10 +102,10 @@
             </div>
             <div class="review-card">
               <div class="col1">
-                <img src="profilepic.jpg" class="review-image" alt="Robert Brown" />
+                <img src="pic3.jpg" class="review-image" alt="Robert Brown" />
               </div>
               <div class="col2">
-                <h3>Jagrdeep</h3>
+                <h3>Robert Brown</h3>
                 <p class="rating">⭐⭐⭐⭐⭐</p>
                 <p>
                   "Highly recommend to anyone looking for premium quality and
@@ -116,6 +117,58 @@
         </section>
       </div>
     </main>
+
+
+
+    <main>
+      <div class="user-review">
+        <section class="review-section" id="reviews">
+          <h2 class="testimonial-heading">User Reviews</h2>
+          <div class="review-cards">
+            <div class="review-card">
+              <div class="col1">
+                <img src="pic1.jpg" class="review-image" alt="John Doe" />
+              </div>
+              <div class="col2">
+                <h3>John Doe</h3>
+                <p class="rating">⭐⭐⭐⭐⭐</p>
+                <p>
+                  "This is the best service I've ever used! The quality is
+                  top-notch, and the process is seamless."
+                </p>
+              </div>
+            </div>
+            <div class="review-card">
+              <div class="col1">
+                <img src="pic2.jpg" class="review-image" alt="Jane Smith" />
+              </div>
+              <div class="col2">
+                <h3>Jane Smith</h3>
+                <p class="rating">⭐⭐⭐⭐</p>
+                <p>
+                  "Excellent support and amazing features. Highly satisfied with
+                  the overall experience."
+                </p>
+              </div>
+            </div>
+            <div class="review-card">
+              <div class="col1">
+                <img src="pic3.jpg" class="review-image" alt="Robert Brown" />
+              </div>
+              <div class="col2">
+                <h3>Robert Brown</h3>
+                <p class="rating">⭐⭐⭐⭐⭐</p>
+                <p>
+                  "Highly recommend to anyone looking for premium quality and
+                  exceptional service."
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
     <!-- Footer -->
     <footer>
       <p>Made with ❤️ by CodersKraft</p>
@@ -127,31 +180,10 @@
     </footer>
     <script src="script.js"></script>
   </body>
-  <!-- Footer -->
-  
-  <!--
-<div class="contact-info">
-    <div class="contact-item">
-      <i class="fas fa-map-marker-alt"></i>
-      <span>123 Agro Lane, City, Country</span>
-    </div>
-    <div class="contact-item">
-      <i class="fas fa-phone-alt"></i>
-      <span>+1 234 567 890</span>
-    </div>
-    <div class="contact-item">
-      <i class="fas fa-envelope"></i>
-      <span>contact@agrolink.com</span>
-    </div>
-    <div class="contact-item">
-      <i class="fas fa-headset"></i>
-      <span>1-800-123-4567 (Toll-Free)</span>
-    </div>
-  </div>
--->
-</footer>
+<!-- Footer -->
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
